# Multiscale-N-Body-Gravity-Physics-Engine

./: CMakeLists.txt  README.md  main.cpp
examples/simple/: CMakeLists.txt  ball_collision.cpp
src/: CMakeLists.txt
src/config/: color_constants.hpp  math_constants.hpp  physics_constants.hpp  render_constants.hpp  sim_constants.hpp
src/core/: README.md  integrator.cpp  integrator.h++  object_manager.cpp  object_manager.hpp  sim_object.h++  sim_object.hpp  simulation.cpp  simulation.hpp
src/entities/: README.md  central_mass.cpp  central_mass.h++  central_mass.hpp  orbit_object.cpp  orbit_object.h++  orbit_object.hpp
src/physics/: README.md  constants.h++  gravity.cpp  gravity.h++  vector_math.cpp  vector_math.hpp
src/render/: README.md  color_palette.h++  color_palette.hpp  renderer.cpp  renderer.h++  renderer.hpp  window.cpp  window.hpp
